; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_edit.c_EDIT_SetCaretPos.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_edit.c_EDIT_SetCaretPos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"%d - %dx%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @EDIT_SetCaretPos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @EDIT_SetCaretPos(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @EDIT_EM_PosFromChar(i32* %8, i32 %9, i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i64 @LOWORD(i32 %13)
  %15 = trunc i64 %14 to i16
  %16 = load i32, i32* %7, align 4
  %17 = call i64 @HIWORD(i32 %16)
  %18 = trunc i64 %17 to i16
  %19 = call i32 @TRACE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %12, i16 signext %15, i16 signext %18)
  %20 = load i32, i32* %7, align 4
  %21 = call i64 @LOWORD(i32 %20)
  %22 = trunc i64 %21 to i16
  %23 = load i32, i32* %7, align 4
  %24 = call i64 @HIWORD(i32 %23)
  %25 = trunc i64 %24 to i16
  %26 = call i32 @SetCaretPos(i16 signext %22, i16 signext %25)
  ret void
}

declare dso_local i32 @EDIT_EM_PosFromChar(i32*, i32, i32) #1

declare dso_local i32 @TRACE(i8*, i32, i16 signext, i16 signext) #1

declare dso_local i64 @LOWORD(i32) #1

declare dso_local i64 @HIWORD(i32) #1

declare dso_local i32 @SetCaretPos(i16 signext, i16 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
